01_K8s_Exercises/task_06_Helm/podinfo_project/podinfo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podinfo-app
  name: podinfo-app
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo-app
  template:
    metadata:
      labels:
        app: podinfo-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - image: ghcr.io/stefanprodan/podinfo
        name: podinfo
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        readinessProbe:
          httpGet:
            path: /healthz
            port: 9898

        livenessProbe:
          httpGet:
            path: /metrics
            port: 9898
        resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
