01_K8s_Exercises/task_06_Helm/podinfo_project/podinfo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: demo
spec:
  tls:
    - secretName: podinfo-app-tls-secret
      hosts:
      - podinfo.local
  ingressClassName: nginx
  rules:
  - host: podinfo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo-app
            port:
              number: 9898
